force-app/main/default/objects/DailyRates__c/DailyRates__c.object-meta.xml
<CustomObject>
    <label>Daily Rates</label>
    <nameField>
        <displayFormat>DR-{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>