force-app/main/default/objects/DailyRates__c/fields/BOM__c.field-meta.xml
<CustomField>
    <fullName>BOM__c</fullName>
    <formula>RDO__r.BOM__c</formula>
    <label>BOM</label>
    <type>Text</type>
</CustomField>