force-app/main/default/objects/DailyRates__c/fields/ExtraTime__c.field-meta.xml
<CustomField>
    <fullName>ExtraTime__c</fullName>
    <label>Extra Time</label>
    <type>Time</type>
</CustomField>