force-app/main/default/objects/DailyRates__c/fields/ExtraTimeFrm__c.field-meta.xml
<CustomField>
    <fullName>ExtraTimeFrm__c</fullName>
    <label>Extra Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>