force-app/main/default/objects/DailyRates__c/fields/frmOccurenceTime__c.field-meta.xml
<CustomField>
    <fullName>frmOccurenceTime__c</fullName>
    <formula>IF( ISNULL(TimeOccurrence__c),
&quot;00:00&quot;,

IF( TEXT(TimeOccurrence__c) = &quot;00:00:00.000&quot;,
&quot;24:00&quot;,

IF(LEN(TEXT(HOUR(TimeOccurrence__c))) = 1,
&quot;0&quot;+TEXT(HOUR(TimeOccurrence__c)),

TEXT(HOUR(TimeOccurrence__c)))
+&quot;:&quot;+

IF(LEN(TEXT(MINUTE(TimeOccurrence__c))) = 1,
&quot;0&quot;+TEXT(MINUTE(TimeOccurrence__c)),

TEXT(MINUTE(TimeOccurrence__c)))
)
)+&quot;:00&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time of Occurrence</label>
    <type>Text</type>
</CustomField>