force-app/main/default/objects/DailyRates__c/fields/ItemAnnex__c.field-meta.xml
<CustomField>
    <fullName>ItemAnnex__c</fullName>
    <label>Item Annex to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>