force-app/main/default/objects/DailyRates__c/fields/PercentReduction__c.field-meta.xml
<CustomField>
    <fullName>PercentReduction__c</fullName>
    <label>% Reduction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>