force-app/main/default/objects/DailyRates__c/fields/PercentReductionNumber__c.field-meta.xml
<CustomField>
    <fullName>PercentReductionNumber__c</fullName>
    <label>% Reduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>