force-app/main/default/objects/DailyRates__c/fields/RDO__c.field-meta.xml
<CustomField>
    <fullName>RDO__c</fullName>
    <label>RDO</label>
    <referenceTo>RDO__c</referenceTo>
    <relationshipLabel>Daily Rates</relationshipLabel>
    <relationshipName>Daily_Rates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>