force-app/main/default/objects/DailyRates__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <label>Start</label>
    <type>Time</type>
</CustomField>