force-app/main/default/objects/DailyRates__c/fields/TimeOccurrence__c.field-meta.xml
<CustomField>
    <fullName>TimeOccurrence__c</fullName>
    <label>Time of Occurrence</label>
    <type>Time</type>
</CustomField>