force-app/main/default/objects/DailyRates__c/fields/TimeOcurrenceFrm__c.field-meta.xml
<CustomField>
    <fullName>TimeOcurrenceFrm__c</fullName>
    <label>Time of Occurrence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>